--- a/hr_leaves/templates/login_base.html
+++ b/hr_leaves/templates/login_base.html
@@ -340,148 +340,25 @@
 					{% if user.is_authenticated %}
 				<nav class="navbar navbar-inverse">
 					<div class="container-fluid">
-				<div class="navbar-header">
-					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar">
-					<span class="sr-only">Toggle navigation</span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-					</button>
-					{% if user.is_admin  or user.is_agency or user.is_controller %}
-						<a class="navbar-brand" href="{% url 'all_missions' %}">
-							<div class="logo">
-								<img src="{% static 'images/logo.png' %}" alt="logo" class="logo-img">
-							</div>
-						</a>
-					{% else %}
-						<a class="navbar-brand" href="{% url 'user_missions' %}">
-							<div class="logo">
-								<img src="{% static 'images/logo.png' %}" alt="logo" class="logo-img">
-							</div>
-						</a>
-					{% endif %}
-					</div>
+						<div class="navbar-header">
+							<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar">
+								<span class="sr-only">Toggle navigation</span>
+								<span class="icon-bar"></span>
+								<span class="icon-bar"></span>
+								<span class="icon-bar"></span>
+							</button>
+							<a class="navbar-brand" href="{% url 'acceuil' %}">
+								<div class="logo">
+									<img src="{% static 'images/logo.png' %}" alt="logo" class="logo-img">
+								</div>
+							</a>
+						</div>
 
-				<div id="navbar" class="navbar-collapse collapse">
-					<ul class="nav navbar-nav navbar-right">
-						{% if user.is_admin or user.is_agency or user.is_controller %}
-							<li><a id="missions" href="{% url 'all_missions' %}">{% trans "Missions" %}</a></li>
-						{% else %}
-							<li><a href="{% url 'user_missions' %}">{% trans "Missions" %}</a></li>
-						{% endif %}
-						{% if user.is_authenticated %}
-							{% if user.is_admin %}
-								<li class="dropdown">
-									<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-										{% trans "Users" %}
-										<span class="caret"></span>
-									</a>
-									<ul class="dropdown-menu">
-										{% if user.is_admin %}
-											<li><a id="agency" href="{% url 'user_send_mail' %}">{% trans "Register User" %}</a></li>
-											<li><a id="all_controller" href="{% url 'users' %}">{% trans "All Ch. to Outside Travels" %}</a></li>
-											<li><a id="all_daaf" href="{% url 'daafs' %}">{% trans "All DAF " %}</a></li>
-										{% endif %}
-										
-									</ul>
-								</li>
-							{% elif user.is_controller %}
-								<li><a id="all_daaf" href="{% url 'daafs' %}">{% trans "All DAF" %}</a></li>
-							{% endif %}
-						{% endif %}
-						{% if not user.is_agency %}
-							<li><a id="pers" href="{% url 'personnes_all' %}">{% trans "Travellers" %}</a></li>
-							{% if user.is_admin %}
-								<li class="dropdown">
-									<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-										{% trans "Charts" %}
-										<span class="caret"></span>
-									</a>
-									<ul class="dropdown-menu">
-										<li><a id="charts" href="{% url 'charts' %}">{% trans "Charts" %}</a></li>
-										<li><a id="actions" href="{% url 'users_action_tracking' %}">{% trans "Users Actions" %}</a></li>
-									</ul>
-								</li>
-							{% else %}
-								<li><a id="charts" href="{% url 'charts' %}">{% trans "Charts" %}</a></li>
-							{% endif %}
-							<li class="dropdown">
-								<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-									{% trans "Agencies" %}
-									<span class="caret"></span>
-								</a>
-								<ul class="dropdown-menu">
-									{% if user.is_admin %}
-										<li><a id="agency" href="{% url 'agency_send_mail' %}">{% trans "Register Agency" %}</a></li>
-									{% endif %}
-									<li><a id="all_agency" href="{% url 'all_agency' %}">{% trans "All Agencies" %}</a></li>
-									<li><a id="company" href="{% url 'company' %}">{% trans " All Company" %}</a></li>
-								</ul>
-							</li>
-						{% endif %}
-						<li class="dropdown">
-							<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-								<span class="glyphicon glyphicon-user"></span> 
-								{% trans "My Account" %}
-								<span class="caret"></span>
-							</a>
-							<ul class="dropdown-menu">
-								{% if user.is_authenticated %}
-									<li>
-										<div class="navbar-login">
-											<div class="row">
-												<div class="col-lg-12">
-													<p class="text-left"><strong>{{user.get_full_name}}</strong></p>
-													<p class="text-left small">{{user.email}}</p>
-													{% if user.is_admin %}
-														<p class="text-left small">{% trans "Administrator" %}</p>
-													{% elif user.is_controller %}
-														<p class="text-left small">{% trans "Ch. to Outside Travels" %}</p>
-													{% elif user.is_agency %}
-														<p class="text-left small">{% trans "Agency" %}</p>
-													{% else %}
-														<p class="text-left small">{% trans "User" %}</p>
-													{% endif %}
-													{% if user.is_admin %}
-														<p class="text-left">
-															<a class="btn btn-primary btn-block btn-sm" id="profile" href="{% url 'user_profile' user.id %}">
-																<i class="glyphicon glyphicon-user"></i>
-																{% trans "My Profile" %}
-															</a>
-														</p>
-													{% endif %}
-												</div>
-												<div class="reset_password">
-													<a href="{% url 'change_password' %}">{% trans "Change my Password" %}</a>
-												</div>
-											</div>
-										</div>
-									</li>
-									<li class="divider"></li>
-									<li>
-										<div class="navbar-login navbar-login-session">
-											<div class="row">
-												<div class="col-lg-12">
-													<p>
-														<a id="logout" class="btn btn-danger btn-block" href="{% url 'logout' %}">
-															<i class="glyphicon glyphicon-log-out"></i>
-															{% trans "Logout" %}
-														</a>
-													</p>
-												</div>
-											</div>
-										</div>
-									</li>
-								{% endif %}
+						<div id="navbar" class="navbar-collapse collapse">
+							<ul class="nav navbar-nav navbar-right">
+								<li><a id="missions" href="{% url 'acceuil' %}">{% trans "Home" %}</a></li>
 							</ul>
-						</li>
-						<li>
-							<a target="_blank" href="{% url 'user_guide' %}">
-								<i style="color: #FFFFFF;font-size: 25px" class="fa">&#63;</i>
-							</a>
-						</li>
-					</ul>
-				</div>
+						</div>
 					</div>
 				</nav>
 				{% endif %}
