--- a/hr_leaves/templates/hr_leaves/employe.html
+++ b/hr_leaves/templates/hr_leaves/employe.html
@@ -53,74 +53,73 @@
 {% endblock %}
 
 {% block content %}
-	<h1 class="text-center">Ajout d'un employé </h1>
 	<h2 class="text-center">{% trans "Add employe" %}</h2>
     <div class="row">
         <form class="form-horizontal" method="post">
             {% csrf_token %}
             <div class="form-group">
-                <label class="col-sm-4 control-label">Matricule :</label>
+                <label class="col-sm-4 control-label">{% trans "Matricule" %}</label>
                 <div class="col-sm-5">
                     {{form.matricule}}
                 </div>
             </div>
             <div class="form-group">
-                <label class="col-sm-4 control-label">Prénom :</label>
+                <label class="col-sm-4 control-label">{% trans "First name :" %}</label>
                 <div class="col-sm-5">
                     {{form.first_name}}
                 </div>
             </div>
             <div class="form-group">
-                <label class="col-sm-4 control-label">Nom :</label>
+                <label class="col-sm-4 control-label">{% trans "Last name :" %}</label>
                 <div class="col-sm-5">
                     {{form.last_name}}
                 </div>
             </div>
             <div class="form-group">
-                <label class="col-sm-4 control-label">Email :</label>
+                <label class="col-sm-4 control-label">{% trans "Mail :" %}</label>
                 <div class="col-sm-5">
                     {{form.email}}
                 </div>
             </div>
             <div class="form-group">
-                <label class="col-sm-4 control-label">Genre :</label>
+                <label class="col-sm-4 control-label">{% trans "Gender :" %}</label>
                 <div class="col-sm-5">
                     {{form.genre}}
                 </div>
             </div>
             <div class="form-group">
-                <label class="col-sm-4 control-label">Fonction :</label>
+                <label class="col-sm-4 control-label">{% trans "Function :" %}</label>
                 <div class="col-sm-5">
                     {{form.fonction}}
                 </div>
             </div>
             <div class="form-group">
-                <label class="col-sm-4 control-label">Departement :</label>
+                <label class="col-sm-4 control-label">{% trans "Department :" %}</label>
                 <div class="col-sm-5">
                     {{form.departement}}
                 </div>
             </div>
             <div class="form-group">
-                <label class="col-sm-4 control-label">Telephone 1 ☎️ :</label>
+                <label class="col-sm-4 control-label">{% trans "Phone 1 ☎️ :" %}</label>
                 <div class="col-sm-5">
                     {{form.phone1}}
                 </div>
             </div>
             <div class="form-group">
-                <label class="col-sm-4 control-label">Telephone 2 ☎️ :</label>
+                <label class="col-sm-4 control-label">{% trans "Phone 2 ☎️ :" %}</label>
                 <div class="col-sm-5">
                     {{form.phone2}}
                 </div>
             </div>
             <div class="form-group">
-                <label class="col-sm-4 control-label">Addresse :</label>
+                <label class="col-sm-4 control-label">{% trans "Address :" %}</label>
                 <div class="col-sm-5">
                     {{form.address}}
                 </div>
             </div>
             <div class="form-group text-center">
-                <input class="btn btn-success btn-lg" type="submit" value="Enregistrer">
-                <a class="btn btn-warning btn-lg" href="#">Annuler</a>
+                <input class="btn btn-success btn-lg" type="submit" value="Submit">
+                <a class="btn btn-warning btn-lg" href="{% url 'employees' %}">Back</a>
             </div>
         </form>
     </div>
