--- a/hr_leaves/templates/hr_leaves/employe.html
+++ b/hr_leaves/templates/hr_leaves/employe.html
@@ -58,7 +58,7 @@
         <form class="form-horizontal" method="post">
             {% csrf_token %}
             <div class="form-group">
-                <label class="col-sm-4 control-label">{% trans "Matricule" %}</label>
+                <label class="col-sm-4 control-label">{% trans "Matricule :" %}</label>
                 <div class="col-sm-5">
                     {{form.matricule}}
                 </div>
