--- a/hr_leaves/templates/hr_leaves/acceuil.html
+++ b/hr_leaves/templates/hr_leaves/acceuil.html
@@ -5,6 +5,7 @@
 
 {% block content %}
 {% if user.is_authenticated %}
-	 <p>{% trans "You are connected" %}</p>	
+     <p>{% trans "You are connected" %}</p>
+     <p>{% trans "Your home page" %}</p>
 {% endif %}
 {% endblock content %}
