--- a/hr_leaves/templates/hr_leaves/user_profile.html
+++ b/hr_leaves/templates/hr_leaves/user_profile.html
@@ -36,104 +36,91 @@
 {% endblock %}
 
 {% block content %}
-{% if users.is_admin %}
-    <h2 class="text-center">{% trans "My Profile" %}</h2>
-{% elif users.is_agency %}
-    <h2 class="text-center">{% trans "Agency Profile" %}</h2>
-{% elif users.is_controller %}
-    <h2 class="text-center">{% trans "Ch. to Outside Travel Profile" %}</h2>
-{% else %}
-    <h2 class="text-center">{% trans "DAF Profile" %}</h2>
-{% endif %}
+<h2 class="text-center">{% trans "My Profile" %}</h2>
+
 <div class="content">
     <form class="form-horizontal" action="{% url 'update_user' users.id %}" method="post">
         {% csrf_token %}
-        {% if users.is_agency %}
-            <div class="form-group">
-                <label class="col-sm-4 control-label">{% trans "Email: *" %}</label>
-                <div class="col-sm-8">
-                    <input type="email" class="form-control" name="email" value="{{users.email}}" required="True">
-                </div>
+        <div class="form-group">
+            <label class="col-sm-4 control-label">{% trans "ID Number: *" %}</label>
+            <div class="col-sm-8">
+                <input type="text" class="form-control" name="id_number" value="{{users.matricule}}" readonly="true">
             </div>
-            <div class="form-group">
-                <label class="col-sm-4 control-label">{% trans "Agency Name: *" %}</label>
-                <div class="col-sm-8">
-                    <input type="text" class="form-control" name="name" value="{{users.first_name}}" required="True">
-                </div>
+        </div>
+        <div class="form-group">
+            <label class="col-sm-4 control-label">{% trans "Email: *" %}</label>
+            <div class="col-sm-8">
+                <input type="email" class="form-control" name="email" value="{{users.email}}" required="True">
             </div>
-            <div class="form-group">
-                <label class="col-sm-4 control-label">{% trans "Phone Number: *" %}</label>
-                <div class="col-sm-8">
-                    <input type="phone" class="form-control" name="phone_number" value="{{users.phone}}"  pattern="6(3|2|6|5)[0-9]{7}", title="{% trans "Please respect the Guinean numerotation"%}">
-                </div>
+        </div>
+        <div class="form-group">
+            <label class="col-sm-4 control-label">{% trans "First Name: *" %}</label>
+            <div class="col-sm-8">
+                <input type="text" class="form-control" name="first_name" value="{{users.first_name}}" required="True">
             </div>
-            <div class="form-group">
-                <label class="col-sm-4 control-label">{% trans "Address: *" %}</label>
-                <div class="col-sm-8">
-                    <input type="phone" class="form-control" name="address" value="{{users.address}}" required="True">
-                </div>
+        </div>
+        <div class="form-group">
+            <label class="col-sm-4 control-label">{% trans "Last Name: *" %}</label>
+            <div class="col-sm-8">
+                <input type="text" class="form-control" name="last_name" value="{{users.last_name}}" required="True">
             </div>
-            <div class="form-group">
-                <label class="col-sm-4 control-label">{% trans "Expired date: *" %}</label>
-                <div class="col-sm-8">
-                    <input type="date" class="form-control" name="expired_date" value="{{users.expired_date}}" required="True">
-                </div>
-            </div>
-        {% else %}
-            <div class="form-group">
-                <label class="col-sm-4 control-label">{% trans "Email: *" %}</label>
-                <div class="col-sm-8">
-                    <input type="email" class="form-control" name="email" value="{{users.email}}" required="True">
-                </div>
-            </div>
-            <div class="form-group">
-                <label class="col-sm-4 control-label">{% trans "First Name: *" %}</label>
-                <div class="col-sm-8">
-                    <input type="text" class="form-control" name="first_name" value="{{users.first_name}}" required="True">
-                </div>
-            </div>
-            <div class="form-group">
-                <label class="col-sm-4 control-label">{% trans "Last Name: *" %}</label>
-                <div class="col-sm-8">
-                    <input type="text" class="form-control" name="last_name" value="{{users.last_name}}" required="True">
-                </div>
-            </div>
-            <div class="form-group">
-                <label class="col-sm-4 control-label">{% trans "ID Number: *" %}</label>
-                <div class="col-sm-8">
-                    <input type="text" class="form-control" name="id_number" value="{{users.id_number}}" required="True">
-                </div>
-            </div>
-            <div class="form-group">
-                <label class="col-sm-4 control-label">{% trans "Ministry: *" %}</label>
-                <div class="col-sm-8">
-                    {% if users.is_admin %}
-                        {% with ministry="" %}{% endwith %}
-                        {% for ministry in ministries %}
-                            {% if ministry.id == users.ministry_id %}
-                                <input name="ministry" value="{{ministry.name}}" class="form-control" readonly="true"/>
-                            {% endif %}
-                        {% endfor %}
-                    {% else %}
-                        <select name="ministry" class="form-control">
-                            {% for ministry in ministries %}
-                                {% if ministry.id == users.ministry_id %}
-                                    <option value="{{ministry.id}}" selected> {{ministry.name}} </option>
-                                {% else %}
-                                    <option value="{{ministry.id}}"> {{ministry.name}} </option>
-                                {% endif %}
-                            {% endfor %}
-                        </select>
+        </div>
+        <div class="form-group">
+            <label class="col-sm-4 control-label">{% trans "Fonction: *" %}</label>
+            <div class="col-sm-8">
+                {% with fonction="" %}{% endwith %}
+                {% for fonction in fonctions %}
+                    {% if fonction.id == users.fonction_id %}
+                        <input name="fonction" value="{{fonction.name}}" class="form-control" readonly="true"/>
                     {% endif %}
-                </div>
+                {% endfor %}
             </div>
-            <div class="form-group">
-                <label class="col-sm-4 control-label">{% trans "Position: *" %}</label>
-                <div class="col-sm-8">
-                    <input type="text" class="form-control" name="position" value="{{users.position}}">
-                </div>
+        </div>
+        <div class="form-group">
+            <label class="col-sm-4 control-label">{% trans "Departement: *" %}</label>
+            <div class="col-sm-8">
+                {% with departement="" %}{% endwith %}
+                {% for departement in departments %}
+                    {% if departement.id == users.departement_id %}
+                        <input name="departement" value="{{departement.name}}" class="form-control" readonly="true"/>
+                    {% endif %}
+                {% endfor %}
             </div>
-        {% endif %}
+        </div>
+        <div class="form-group">
+            <label class="col-sm-4 control-label">{% trans "Phone 1: *" %}</label>
+            <div class="col-sm-8">
+                <input type="text" class="form-control" name="phone1" value="{{users.phone1}}">
+            </div>
+        </div>
+        <div class="form-group">
+            <label class="col-sm-4 control-label">{% trans "Phone 2: *" %}</label>
+            <div class="col-sm-8">
+                <input type="text" class="form-control" name="phone2" value="{{users.phone2}}">
+            </div>
+        </div>
+        <div class="form-group">
+            <label class="col-sm-4 control-label">{% trans "Address: *" %}</label>
+            <div class="col-sm-8">
+                <input type="text" class="form-control" name="address" value="{{users.address}}">
+            </div>
+        </div>
+        <div class="form-group">
+            <label class="col-sm-4 control-label">{% trans "Gender: *" %}</label>
+            <div class="col-sm-8">
+                {% for gender, i in genders %}
+                    {% if gender == users.genre %}
+                        <div class="radio">
+                            <label><input type="radio" value="{{gender}}" name="gender" checked> {{i}}</label>
+                        </div>
+                    {% else %}
+                        <div class="radio">
+                            <label><input type="radio" value="{{gender}}" name="gender"> {{i}}</label>
+                        </div>
+                    {% endif %}
+                {% endfor %}
+            </div>
+        </div>
         <div class="form-group">
             <div class="btn-rigth">
                 <button type="submit" class="btn btn-lg btn-send">
