--- a/hr_leaves/templates/hr_leaves/liste_departments.html
+++ b/hr_leaves/templates/hr_leaves/liste_departments.html
@@ -48,7 +48,63 @@
               <td></td>
               <td>{{ departement.name }}</td>
               <td>{{ departement.created_at }}</td>
+              <td>
+                  <a href="#" data-toggle="modal" data-target="#{{departement.id}}View" class="btn-user" id="name">
+                      <span class="glyphicon glyphicon-trash"></span>
+                    </a>
+                    <a href="#" data-toggle="modal" data-target="#{{departement.id}}ViewD" class="btn-user" id="name">
+                        <span class="glyphicon glyphicon-edit"></span>
+                      </a>
+             
+                </td>
             </tr>
+            <div id="{{departement.id}}ViewD" class="modal fade" role="dialog">
+                <div class="modal-dialog">
+                  <!-- Modal content -->
+                  <form class="form-horizontal" method="post" action="{% url 'update_departement' departement.id %}">
+                      {% csrf_token %}  
+                      <div class="modal-content">
+                        <div class="modal-header">
+                          <button type="button" class="close" data-dismiss="modal">&times;</button>
+                          <h4 class="modal-title">{% trans "update deprtment" %}</h4>
+                        </div>
+                        <div class="modal-body" id="user-details">
+                          <div class="form-group">
+                            <label class="control-label">{% trans "Department name" %}:</label>
+                            <input type="text" value="{{departement.name}}" name="name" placeholder="Department name" class="form-control" maxlength="100" required="" id="id_name">
+                          </div>
+                        </div>
+                        <div class="modal-footer">
+                          <button type="submit" class="btn btn-success">{% trans "update" %}</button>
+                          <button type="button" class="btn btn-primary" data-dismiss="modal">{% trans "No" %}</button>
+                        </div>
+                      </div>
+                    </form>
+                  </div>
+                </div>
+            <div id="{{departement.id}}View" class="modal fade" role="dialog">
+                <div class="modal-dialog">
+                  <!-- Modal content -->
+                  <div class="modal-content">
+                    <div class="modal-header">
+                      <button type="button" class="close" data-dismiss="modal">&times;</button>
+                      <h4 class="modal-title">{% trans "delete department" %}</h4>
+                    </div>
+                    <div class="modal-body" id="user-details">
+                        <h3>Are you sure ?</h3>
+                        <div class="modal-footer">
+                            <a href="{% url 'delete_department' departement.id %}" class="btn btn-danger" id="name">
+                                <span class="glyphicon glyphicon-trash"></span>
+                                {% trans " delete" %}
+                              </a>
+                              
+                            <button type="button" class="btn btn-primary" data-dismiss="modal">{% trans "No" %}</button>
+                          </div>
+                        </div>
+                      
+                    </div>
+                  </div>
+                </div>
         {% endfor %}
           <!-- User Detail Modal -->
           <div id="newDepartment" class="modal fade" role="dialog">
