--- a/hr_leaves/templates/hr_leaves/liste_functions.html
+++ b/hr_leaves/templates/hr_leaves/liste_functions.html
@@ -41,6 +41,7 @@
           <th>{% trans "Functions" %}</th>
            <th>{% trans "Category" %}</th>
           <th>{% trans "Created at" %}</th>
+          <th>{% trans "Actions" %}</th>
         </tr>
       </thead>
       <tbody>
@@ -50,8 +51,67 @@
               <td>{{ fonction.name }}</td>
               <td>{{ fonction.categorie }}</td>
               <td>{{ fonction.created_at }}</td>
+              <td>
+                  <a href="#" data-toggle="modal" data-target="#{{fonction.id}}View" class="btn-user" id="name">
+                      <span class="glyphicon glyphicon-trash"></span>
+                    </a>
+                    <a href="#" data-toggle="modal" data-target="#{{fonction.id}}ViewF" class="btn-user" id="name">
+                      <span class="glyphicon glyphicon-edit"></span>
+                    </a>
+             
+                </td>
             </tr>
+
+            <div id="{{fonction.id}}ViewF" class="modal fade" role="dialog">
+                <div class="modal-dialog">
+                  <!-- Modal content -->
+                  <form class="form-horizontal" method="post" action="{% url 'update_function' fonction.id %}">
+                      {% csrf_token %}  
+                      <div class="modal-content">
+                        <div class="modal-header">
+                          <button type="button" class="close" data-dismiss="modal">&times;</button>
+                          <h4 class="modal-title">{% trans "update function" %}</h4>
+                        </div>
+                        <div class="modal-body" id="user-details">
+                          <div class="form-group">
+                            <label class="control-label">{% trans "function name" %}:</label>
+                            <input type="text" value="{{fonction.name}}" name="name" placeholder="Department name" class="form-control" maxlength="100" required="" id="id_name">
+                          </div>
+                        </div>
+                        <div class="modal-footer">
+                          <button type="submit" class="btn btn-success">{% trans "update" %}</button>
+                          <button type="button" class="btn btn-primary" data-dismiss="modal">{% trans "No" %}</button>
+                        </div>
+                      </div>
+                    </form>
+                  </div>
+                </div>
+            <div id="{{fonction.id}}View" class="modal fade" role="dialog">
+                <div class="modal-dialog">
+                  <!-- Modal content -->
+                  <div class="modal-content">
+                    <div class="modal-header">
+                      <button type="button" class="close" data-dismiss="modal">&times;</button>
+                      <h4 class="modal-title">{% trans "delete function" %}</h4>
+                    </div>
+                    <div class="modal-body" id="user-details">
+                        <h3>Are you sure ?</h3>
+                        <div class="modal-footer">
+                            <a href="{% url 'delete_function' fonction.id %}" class="btn btn-danger" id="name">
+                                <span class="glyphicon glyphicon-trash"></span>
+                                {% trans " delete" %}
+                              </a>
+                             
+                            <button type="button" class="btn btn-primary" data-dismiss="modal">{% trans "No" %}</button>
+                          </div>
+                        </div>
+                      
+                    </div>
+                  </div>
+                </div>
         {% endfor %}
+         
+          </div>
           <!-- User Detail Modal -->
           <div id="newFunction" class="modal fade" role="dialog">
             <div class="modal-dialog">
